--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [parameters]
-sample_interval = 20
+sample_interval = 100
 range = 6
-pre_stepv = -100,-100,-100,-100
-v1 = 100,100,100,100
-v2 = 200,200,200,750
-gain = 2, 2, 2, 2
-quiettime = 2000
+pre_stepv = 100,-100,50,-50
+v1 = 50,-50,-100,100
+v2 = -750,100,50,-50
+gain = 5,5,5,5
+quiettime = 4000
 t1 = 4000
-t2 = 2000
+t2 = 4000
 
