--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,14 @@
 [parameters]
 sample_interval = 100
 range = 6
-pre_stepv = 100,-100,50,-50
-v1 = 50,-50,-100,100
-v2 = -750,100,50,-50
-gain = 5,5,5,5
+gain = 6,6,6,6
+
 quiettime = 4000
-t1 = 4000
-t2 = 4000
+pre_stepv = 250,0,0,0
+
+t1 = 10000
+v1 = 500,-50,-100,100
+
+t2 = 400
+v2 = 0,0,0,0
 
